--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/bethel-school-of-technology/team-crud-happens-backend#readme",
   "dependencies": {
+    "@google-cloud/storage": "^5.8.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   }
 }
