--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   },
   "homepage": "https://github.com/bethel-school-of-technology/team-crud-happens-backend#readme",
   "dependencies": {
-    "@google-cloud/storage": "^5.8.5",
-    "body-parser": "^1.19.0",
+    "@google-cloud/storage": "^7.12.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "firebase": "^8.6.8",
-    "mongoose": "^5.12.13",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "express": "^4.19.2",
+    "firebase": "^10.13.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4"
   }
 }
